# gaming-telemetry

./: Cargo.toml  README.md
.github/workflows/: ci.yml  sentry-release.yml
docs/: PROPOSED_PERMANENT_CI_WORKFLOW.md
src/: cpu.rs  main.rs  privacy.rs
