[package]
name = "gaming-telemetry"
version = "0.1.0"
license = "GPL-3.0"
edition = "2021"

[workspace]

[dependencies]
nvml-wrapper = { version = "0.12", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
polars = { version = "0.46", features = ["parquet", "lazy"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
duckdb = { version = "1.1", features = ["polars", "bundled"] }
sentry = { version = "0.48", default-features = false, features = ["backtrace", "panic", "anyhow", "transport", "tokio"] }
